# workspace_sandbox

./: .gitignore  .pubignore  CHANGELOG.md  LICENSE  README.md  pubspec.yaml
example/: 01_advanced_python_api.dart  01_basic_usage.dart  02_observability.dart  02_security_audit.dart  03_git_workflow_at.dart  03_network_isolation.dart  04_data_processing_spawn.dart  04_streaming_output.dart  05_interactive_repl.dart  05_timeout_control.dart  06_host_vs_secure.dart  agent_csplus_server.dart  agent_data_science.dart  agent_django_api.dart  agent_node.dart  agent_springboot_jwt.dart  cli_repl_sandboxed.dart  cli_sandboxed.dart  cli_unsandboxed.dart  example.dart  main.dart
lib/: workspace_sandbox.dart
lib/src/: workspace_impl.dart
lib/src/core/: launcher_service.dart  path_security.dart  shell_wrapper.dart
lib/src/fs/: file_system_service.dart
lib/src/models/: command_result.dart  workspace_event.dart  workspace_options.dart  workspace_process.dart
lib/src/native/: ffi_bridge.dart  (+2 more)
native/: Cargo.toml  engine.rs
native/include/: workspace_core.h
native/src/: engine.rs  main.rs  workspace_core.cpp
native/src/common/: internal_api.h
native/src/linux/: process_linux.cpp
native/src/strategies/: base.rs  host.rs  linux.rs  macos.rs  mod.rs  windows.rs
native/src/windows/: process_win.cpp
test/: audit_config.dart
test/integration/: api_test.dart  complex_scenarios_test.dart  concurrency_test.dart  core_integration_test.dart  dirty_network_test.dart  django_scenario_test.dart  isolation_test.dart  sandbox_test.dart  security_test.dart  streaming_test.dart
test/security/: pentest_test.dart
test/unit/: command_result_test.dart  security_guard_test.dart  shell_parser_test.dart
(+6 files in other folders)
